maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:11: error: ')' expected but '}' found.
    }
    ^